# Projeto-CSLP

./: .gitignore  CMakeLists.txt  Doxyfile  ImageManipulator.cpp  ImageManipulator.h  README.md  VideoPlayer  VideoPlayer.cpp  hybrid.txt  hybridLossy.txt  main.cpp  my_program  report.md  results_hybrid_decode.txt  results_lossy.txt  results_lossy_decode.txt
html/: BitStream_8hpp.html  BitStream_8hpp_source.html  Converter_8hpp.html  Converter_8hpp_source.html  Golomb_8hpp.html  Golomb_8hpp_source.html  HybridCoding_8hpp_source.html  _bit_stream_8hpp.html  _bit_stream_8hpp_source.html  _frames_reader_8hpp_source.html  _golomb_8hpp.html  _golomb_8hpp_source.html  _hybrid_coding_8hpp_source.html  annotated.html  classBitStream-members.html  classBitStream.html  classConverter-members.html  classConverter.html  classGolombDecoder-members.html  classGolombDecoder.html  classGolombEncoder-members.html  classGolombEncoder.html  classHybridDecoder-members.html  classHybridDecoder.html  classHybridEncoder-members.html  classHybridEncoder.html  classInterDecoder-members.html  classInterDecoder.html  classInterEncoder-members.html  classInterEncoder.html  classIntraDecoder-members.html  classIntraDecoder.html  classIntraEncoder-members.html  classIntraEncoder.html  class_bit_stream-members.html  class_bit_stream.html  class_frames_reader-members.html  class_frames_reader.html  class_golomb_decoder-members.html  class_golomb_decoder.html  (+26 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
include/: BitStream.hpp  Converter.hpp  FramesReader.hpp  Golomb.hpp  HybridCoding.hpp  ImageManipulator.hpp  YUVReader.hpp  interCoding.hpp  intraCoding.hpp
latex/: BitStream_8hpp.tex  Converter_8hpp.tex  Golomb_8hpp.tex  _bit_stream_8hpp.tex  _bit_stream_8hpp_source.tex  _frames_reader_8hpp_source.tex  _golomb_8hpp.tex  _golomb_8hpp_source.tex  _hybrid_coding_8hpp_source.tex  annotated.tex  classBitStream.tex  classConverter.tex  classGolombDecoder.tex  classGolombEncoder.tex  classHybridCoding.tex  classHybridDecoder.tex  classHybridEncoder.tex  classInterDecoder.tex  classInterEncoder.tex  classIntrDecoder.tex  classIntraDecoder.tex  classIntraEncoder.tex  class_bit_stream.tex  class_frames_reader.tex  class_golomb_decoder.tex  class_golomb_encoder.tex  class_hybrid_decoder.tex  class_hybrid_encoder.tex  class_inter_decoder.tex  class_inter_encoder.tex  class_intra_decoder.tex  class_intra_encoder.tex  classintraCoding.tex  files.tex  index.tex  inter_coding_8hpp_source.tex  intra_coding_8hpp_source.tex  refman.tex
src/: BitStream.cpp  BitStream.hpp  CMakeLists.txt  Converter.cpp  Delivery1_1.cpp  Delivery1_2.cpp  Delivery1_3a.cpp  Delivery1_3b.cpp  Delivery1_3c.cpp  Delivery1_3d.cpp  Delivery1_3e.cpp  Delivery1_3f.cpp  Delivery1_3g.cpp  Delivery2_5.cpp  Delivery3_7.cpp  Delivery4.cpp  Delivery5.cpp  Doxyfile  FramesReader.cpp  Golomb.cpp  Golomb.hpp  Golombo.cpp  HybridCoding.cpp  HybridCoding.hpp  ImageManipulator.cpp  ImageManipulator.hpp  PredictiveCoding.cpp  PredictiveCoding.hpp  YUVReader.cpp  functions.cpp  functions.hpp  hybridDecode.cpp  hybridEncode.cpp  hybridEncodeTest.cpp  interCoding.cpp  intraCoding.cpp  intraCoding.hpp  intraDecode.cpp  intraDecodeTest.cpp  intraEncode.cpp  (+2 more)
src/html/: BitStream_8cpp_source.html  BitStream_8hpp_source.html  Golomb_8cpp_source.html  Golomb_8hpp_source.html  HybridCoding_8cpp_source.html  HybridCoding_8hpp_source.html  ImageManipulator_8hpp_source.html  PredictiveCoding_8hpp_source.html  annotated.html  classBitStream-members.html  classBitStream.html  classGolomb-members.html  classGolomb.html  classHybridCoding-members.html  classHybridCoding.html  classImageManipulator-members.html  classImageManipulator.html  classPredictiveCoding-members.html  classPredictiveCoding.html  classes.html  classintraCoding-members.html  classintraCoding.html  dir_119b1ea608c82e8ef1352273604d0691.html  dir_122213c82103b20e701e6ba074b9588a.html  dir_23bd91f1ddb692fcf2881045a5d53618.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_8709839a9d79368a45827a6a09b38fce.html  dir_a636cf96a5b966d26fdae0a751daec5f.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  files.html  functions.html  functions_8hpp_source.html  functions_func.html  functions_vars.html  index.html  intraCoding_8cpp_source.html  intraCoding_8hpp_source.html  (+1 more)
src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+2 more)
src/latex/: BitStream_8cpp_source.tex  BitStream_8hpp_source.tex  Golomb_8cpp_source.tex  Golomb_8hpp_source.tex  HybridCoding_8cpp_source.tex  HybridCoding_8hpp_source.tex  ImageManipulator_8hpp_source.tex  annotated.tex  classBitStream.tex  classGolomb.tex  classHybridCoding.tex  classImageManipulator.tex  classPredictiveCoding.tex  classintraCoding.tex  files.tex  functions_8hpp_source.tex  intraCoding_8cpp_source.tex  intraCoding_8hpp_source.tex  refman.tex
tests/: HybridDecoderTest.cpp  HybridEncoderTest.cpp  HybridLossyDecoderTest.cpp  HybridLossyEncoderTest.cpp  IntraDecoderTest.cpp  IntraEncoderTest.cpp  hybridDecodeTest.cpp  hybridEncodeTest.cpp
